fixing the responsiveness on mobile pt5...

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,7 +45,6 @@ hr {
 	margin-top: 0.5%;
 	margin-left: 0.3%;
 	display: flex;
-	width: 100%;
 }
 
 .headline {
